# ProKo-Belegaufgabe

./: CMakeLists.txt  README.md  README.txt
src/: EmbossFilter.cpp  EmbossFilter.hpp  RgbToGrayscale.cpp  RgbToGrayscale.hpp  RgbToHsv.cpp  RgbToHsv.hpp  VersionMPI.cpp  VersionMPI.hpp  VersionNonParallel.cpp  VersionNonParallel.hpp  VersionOpenCV.cpp  VersionOpenCV.hpp  VersionOpenMP.cpp  VersionOpenMP.hpp  cvVersion.cpp  cvVersion.hpp  main.cpp  mpiVersion.cpp  mpiVersion.hpp  normalVersion.cpp  normalVersion.hpp  ompVersion.cpp  ompVersion.hpp
